# Phantom-Messege

./: MANIFEST.in  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  setup.py
config/: licenses.db
database/: generated_licenses.db
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  crypto_utils.py  dropbox_sync.py  license_database.py  license_manager.py  message_sender.py  p2p_manager.py  security_manager.py
src/gui/: activation_dialog.py  main_window.py  styles.py
src/gui/components/: client_chat_widget.py  device_details_widget.py  device_map_widget.py  license_info_widget.py  support_chat_dialog.py  support_widget.py  ticket_close_dialog.py  ticket_details_dialog.py  ticket_reply_dialog.py
src/gui/icons/: __init__.py
src/gui/styles/: __init__.py  stylesheets.py  themes.py
src/parsers/: __init__.py  base_parser.py  ngl_parser.py  page_parser.py  parser_factory.py  tellonym_parser.py
src/text_generator/: __init__.py  text_generator.py  word_library.py
src/text_generator/generators/: __init__.py  emoji_generator.py  sentence_generator.py  slang_generator.py
src/text_generator/libraries/: adjectives.json  adverbs.json  objects.json  subjects.json
src/utils/: __init__.py  input_handler.py  logger.py  stats_visualizer.py
src/utils/logging/: __init__.py  handlers.py  message_logger.py
src/utils/stats/: __init__.py  (+3 more)
tools/: __init__.py  common.py  db_manager.py  license_generator.py  license_generator_gui.py  license_server.py  ticket_manager.py
tools/database/: generated_licenses.db
(+30 files in other folders)
